# pysystemtrade

./: .dockerignore  .gitignore  CHANGES.md  CONTRIBUTING.md  Dockerfile  README.md  connection_loop.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: action.yml  build-test.yml  os-test.yml  quick-test.yml  slow-test-develop.yml  slow-test.yml
dashboard/: app.py
data/tools/: delete_instrument.py  instrument_deleter.py
docs/: backtesting.md  dashboard_and_monitor.md  data.md  data_fsb.md  docker.md  instruments.md  production.md
examples/Jts/: jts.ini
examples/ibc/: config.ini
examples/introduction/: asimpletradingrule.py  prebakedsystems_cj.py
examples/logging/: poc.py
examples/production/: private_config_example.yaml
fsb/adjusted_prices_csv/: AEX_fsb.csv  ASX_fsb.csv  AUDJPY_fsb.csv  AUD_fsb.csv  BOBL_fsb.csv  BRENT_W_fsb.csv  BTP3_fsb.csv  BTP_fsb.csv  BUND_fsb.csv  BUXL_fsb.csv  CAC_fsb.csv  CADJPY_fsb.csv  CAD_fsb.csv  CHFJPY_fsb.csv  CHF_fsb.csv  COCOA_LDN_fsb.csv  COCOA_fsb.csv  COFFEE_fsb.csv  COPPER_fsb.csv  CORN_fsb.csv  COTTON2_fsb.csv  CRUDE_W_fsb.csv  DAX_fsb.csv  DOW_fsb.csv  DX_fsb.csv  EDOLLAR_fsb.csv  EU-BANKS_fsb.csv  EUA_fsb.csv  EURCAD_fsb.csv  EURCHF_fsb.csv  EURGBP_fsb.csv  EURIBOR-ICE_fsb.csv  EURO600_fsb.csv  EUROSTX_fsb.csv  EUR_fsb.csv  FED_fsb.csv  FTSE100_fsb.csv  FTSE250_fsb.csv  FTSEAFRICA40_fsb.csv  FTSECHINAH_fsb.csv  (+59 more)
fsb/csvconfig/: instrumentconfig.csv  instrumentconfig_DEMO.csv  instrumentconfig_LIVE.csv  instrumentconfig_demo.csv  rollconfig.csv  spreadcosts.csv
fsb/epic_history_csv/: AEX_fsb.csv  ASX_fsb.csv  AUDJPY_epics.csv  AUDJPY_fsb.csv  AUD_fsb.csv  BOBL_fsb.csv  BRENT_W_fsb.csv  BTP3_fsb.csv  BTP_fsb.csv  BUND_fsb.csv  BUXL_fsb.csv  CAC_fsb.csv  CADJPY_fsb.csv  CAD_fsb.csv  CHFJPY_fsb.csv  CHF_fsb.csv  COCOA_LDN_fsb.csv  COCOA_fsb.csv  COFFEE_fsb.csv  COPPER_fsb.csv  CORN_fsb.csv  COTTON2_fsb.csv  CRUDE_W_fsb.csv  DAX_fsb.csv  DOW_fsb.csv  DX_fsb.csv  EU-BANKS_fsb.csv  EUA_fsb.csv  EURCAD_fsb.csv  EURCHF_fsb.csv  EURGBP_fsb.csv  EURIBOR-ICE_fsb.csv  EURO600_fsb.csv  EUROSTX_fsb.csv  EUR_fsb.csv  FED_fsb.csv  FTSE100_fsb.csv  FTSE250_fsb.csv  FTSEAFRICA40_fsb.csv  FTSECHINAH_fsb.csv  (+61 more)
fsb/fx_prices_csv/: AUDUSD.csv  CADUSD.csv  CHFUSD.csv  CNHUSD.csv  EURUSD.csv  GBPUSD.csv  HKDUSD.csv  JPYUSD.csv  KRWUSD.csv  SGDUSD.csv
fsb/market_info_json/: CAD_fsb_20230300.json  CAD_fsb_20230600.json  CRUDE_W_fsb_20230300.json  EUROSTX_fsb_20230300.json  EUROSTX_fsb_20230600.json  GOLD_fsb_20230600.json  NASDAQ_fsb_20230600.json  NZD_fsb_20230900.json  NZD_fsb_20231200.json  US10_fsb_20230300.json
fsb/multiple_prices_csv/: AEX_fsb.csv  ASX_fsb.csv  AUDJPY_fsb.csv  AUD_fsb.csv  BOBL_fsb.csv  BTP3_fsb.csv  BTP_fsb.csv  BUND_fsb.csv  BUXL_fsb.csv  CAC_fsb.csv  CADJPY_fsb.csv  CHFJPY_fsb.csv  COCOA_LDN_fsb.csv  COCOA_fsb.csv  COFFEE_fsb.csv  COPPER_fsb.csv  CORN_fsb.csv  COTTON2_fsb.csv  CRUDE_W_fsb.csv  EDOLLAR_fsb.csv  EU-BANKS_fsb.csv  EUA_fsb.csv  EURCAD_fsb.csv  EURGBP_fsb.csv  EURIBOR-ICE_fsb.csv  EURIBOR_fsb.csv  EURO600_fsb.csv  EUROSTX_fsb.csv  EUR_fsb.csv  FED_fsb.csv  FTSE250_fsb.csv  FTSEAFRICA40_fsb.csv  FTSECHINAH_fsb.csv  GAS_NL_fsb.csv  GAS_UK_fsb.csv  GAS_US_fsb.csv  GBPCHF_fsb.csv  GBPJPY_fsb.csv  GBP_fsb.csv  GILT_fsb.csv  (+42 more)
fsb/roll_calendars_csv/: AEX_fsb.csv  AUDJPY_fsb.csv  BOBL_fsb.csv  BRENT_W_fsb.csv  BTP3_fsb.csv  BTP_fsb.csv  BUXL_fsb.csv  CAC_fsb.csv  CADJPY_fsb.csv  CAD_fsb.csv  CHFJPY_fsb.csv  COCOA_fsb.csv  COFFEE_fsb.csv  COPPER_fsb.csv  CORN_fsb.csv  COTTON2_fsb.csv  DOW_fsb.csv  DX_fsb.csv  EDOLLAR_fsb.csv  EU-BANKS_fsb.csv  EUA_fsb.csv  EURCAD_fsb.csv  EURCHF_fsb.csv  EURIBOR-ICE_fsb.csv  EURIBOR_fsb.csv  EURO600_fsb.csv  EUROSTX_fsb.csv  FED_fsb.csv  FTSE250_fsb.csv  FTSEAFRICA40_fsb.csv  FTSECHINAH_fsb.csv  GASOIL_fsb.csv  GAS_NL_fsb.csv  GAS_UK_fsb.csv  GAS_US_fsb.csv  GBPCHF_fsb.csv  GILT_fsb.csv  (+27 more)
sysbrokers/: broker_activity_data.py  broker_capital_data.py  broker_contract_position_data.py  broker_execution_stack.py  broker_factory.py  broker_futures_contract_data.py
syscontrol/: control_config.yaml  html_generation.py  html_monitor.py  monitor.py  run_process.py  strategy_tools.py
syscore/: dateutils.py  exceptions.py  fileutils.py  genutils.py  interactive.py  pdutils.py  rounding.py  text.py
sysdata/: data_blob.py
sysexecution/: tick_data.py  trade_qty.py
syslogdiag/: emailing.py  log_entry.py  log_to_screen.py  pst_logger.py
syslogging/: adapter.py  logger.py  logging_prod.yaml  logging_prod_v2.yaml  logging_sim.yaml  server.py
sysobjects/: contract_dates_and_expiries.py  contracts.py  dict_of_futures_per_contract_prices.py  epic_history.py  fsb_contract_prices.py  futures_per_contract_prices.py  instruments.py  roll_calendars.py  rolls.py  spreadbet_instruments.py  spreads.py
sysproduction/: backup_arctic_to_csv.py  backup_db_to_csv.py  backup_mongo_data_as_dump.py  backup_parquet_data_to_remote.py  backup_state_files.py  clean_truncate_backtest_states.py  clean_truncate_echo_files.py  clean_truncate_log_files.py  debug_ig_handler.py  debug_stack_handler.py  generate_fsb_updates.py  ig_handlers.py  interactive_controls.py  interactive_diagnostics.py  interactive_fsb.py  interactive_manual_check_fx_prices.py  interactive_manual_check_historical_prices.py  interactive_order_stack.py  interactive_status.py  interactive_update_capital_manual.py  interactive_update_roll_status.py  pst.py  run_daily_fx_and_contract_updates.py  run_daily_price_updates.py  run_downloads.py  run_epic_discovery.py  run_ig_handler.py  run_market_info_updates.py  run_mongo_check.py  run_reports.py  run_solo_reports.py  run_stack_handler.py  run_strategy_order_generator.py  run_systems.py  update_all.py  update_epics.py  update_fsb_epic_periods.py  update_fsb_market_info.py  update_fx_prices.py  update_fx_prices_alphavantage.py  (+13 more)
sysquant/: portfolio_risk.py  returns.py
systems/: basesystem.py  buffering.py  forecast_combine.py  portfolio.py  portfolio_fsb.py  rawdata.py  risk.py  system_utils.py
tests/: test_examples.py  test_fsb_examples.py
(+1394 files in other folders)
