[project]
name = "pysystemtrade"
version = "1.80"
authors = [
  { name="Robert Carver", email="rob@systematicmoney.org" },
]
description = "Systematic futures trading in Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU GPL v3"}
dependencies = [
    "pandas>=1.5.3,<=2.1.3",
    "matplotlib>=3.0.0",
    "PyYAML>=5.3",
    "numpy>=1.24.0",
    "scipy>=1.0.0",
    "pymongo==3.11.0",
    "arctic==1.82.0",
    "psutil==5.6.6",
    "pytest>6.2",
    "Flask>=2.0.1",
    "Werkzeug>=2.0.1",
    "statsmodels==0.14.0",
    "PyPDF2>=2.5.0",
    "pyarrow>=14.0.1",
    "scikit-learn>1.3.0",
    "requests>=2.25",
    "trading-ig",
    "beautifulsoup4>4.9",
    "ratelimit>=2.2",
    "tenacity>=8.0",
    "munch>=2.5",
    "pytz==2023.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU v3",
    "Operating System :: Linux",
]

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/robcarver17/pysystemtrade"
"Bug Tracker" = "https://github.com/robcarver17/pysystemtrade/issues"

[tool.setuptools.package-data]
'data' = ["*.csv"]
'private' = ["*.yaml"]
'sysbrokers' = ["*.csv", "*.yaml"]
'syscontrol' = ["*.yaml"]
'sysdata' = ["*.csv"]
'sysdata.config' = ["*.yaml"]
'sysinit' = ["*.csv"]
'systems.provided' = ["*.yaml"]

[tool.pytest.ini_options]
norecursedirs = "examples"
addopts = "--doctest-modules --ignore=systems/provided/moretradingrules/temp.py"
log_cli = "true"
log_cli_level = 10
log_format = '%(asctime)s %(levelname)s %(name)s %(message)s'
log_date_format = '%Y-%m-%d %H:%M:%S'
doctest_optionflags = ["ELLIPSIS", "NUMBER", "NORMALIZE_WHITESPACE"]
testpaths = [
    # "syscore",
    # "syscore/interactive/display",
    "syscore/pandas",
    "syscore/tests",
    # "sysdata",
    "sysdata/config",
    # "sysdata/sim",
    "sysdata/tests",
    "sysinit/futures/tests",
    # "syslogdiag",
    "systems/tests",
    "sysobjects/production",
    "sysobjects/tests",
    # "sysquant/estimators",
    "sysquant/optimisation",
    # "systems",
    # "systems/accounts",
    # "systems/provided",
    # "systems/provided/futures_chapter15",
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py310']
required-version = '23.11.0'

[project.scripts]
pst = "sysproduction.pst:pst"
pst-stack = "sysproduction.run_stack_handler:run_stack_handler"
pst-capital = "sysproduction.run_capital_update:run_capital_update"
pst-fx = "sysproduction.run_daily_fx_and_contract_updates:run_daily_fx_and_contract_updates"
pst-prices = "sysproduction.run_daily_price_updates:run_daily_price_updates"
pst-multadj = "sysproduction.run_daily_update_multiple_adjusted_prices:run_daily_update_multiple_adjusted_prices"
pst-systems = "sysproduction.run_systems:run_systems"
pst-orders = "sysproduction.run_strategy_order_generator:run_strategy_order_generator"
pst-clean = "sysproduction.run_cleaners:run_cleaners"
pst-backup = "sysproduction.run_backups:run_backups"
pst-reports = "sysproduction.run_reports:run_reports"
# pst-slippage = "sysproduction.update_slippage:update_slippage"
# "pst-startup = sysproduction.startup:startup"
