[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysystemtrade"
version = "1.8.2"
authors = [
  { name="Robert Carver", email="rob@systematicmoney.org" },
]
description = "Systematic futures trading in Python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["systematic trading", "interactive brokers"]
dependencies = [
    "pandas==2.1.3",
    "matplotlib>=3.0.0",
    "PyYAML==6.0.1",
    "numpy>=1.24.0",
    "scipy>=1.0.0",
    "pymongo==3.12.3",
    "ib-insync==0.9.86",
    "psutil==5.6.7",
    "Flask>=2.0.1",
    "Werkzeug>=2.0.1",
    "statsmodels==0.14.0",
    "PyPDF2>=2.5.0",
    "scikit-learn>1.3.0",
    "pytz==2023.3",
    "pyarrow>=16,<20",
]

[project.optional-dependencies]
arctic = ["arctic @ git+https://github.com/man-group/arctic.git"]
dev = ["pytest>6.2", "black[d]==23.11.0"]

[project.urls]
"Homepage" = "https://github.com/robcarver17/pysystemtrade"
"Bug Tracker" = "https://github.com/robcarver17/pysystemtrade/issues"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"data" = ["*.csv"]
"private" = ["*.yaml"]
"sysbrokers" = ["*.csv", "*.yaml"]
"syscontrol" = ["*.yaml"]
"sysdata" = ["*.csv"]
"sysdata.config" = ["*.yaml"]
"sysinit" = ["*.csv"]
"systems.provided" = ["*.yaml"]

[tool.pytest.ini_options]
norecursedirs = "examples"
addopts = "--doctest-modules --ignore=systems/provided/moretradingrules/temp.py"
log_cli = "true"
log_cli_level = 10
log_format = "%(asctime)s %(levelname)s %(name)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
doctest_optionflags = ["ELLIPSIS", "NUMBER", "NORMALIZE_WHITESPACE"]
testpaths = [
    # "syscore",
    # "syscore/interactive/display",
    "syscore/pandas",
    "syscore/tests",
    # "sysdata",
    "sysdata/config",
    # "sysdata/sim",
    "sysdata/tests",
    "sysinit/futures/tests",
    # "syslogdiag",
    "systems/tests",
    "sysobjects/production",
    "sysobjects/tests",
    # "sysquant/estimators",
    "sysquant/optimisation",
    # "systems",
    # "systems/accounts",
    # "systems/provided",
    # "systems/provided/futures_chapter15",
    "tests",
]

[tool.black]
line-length = 88
target-version = ["py310"]
required-version = "23.11.0"

[project.scripts]
pst = "sysproduction.pst:pst"
pst-stack = "sysproduction.run_stack_handler:run_stack_handler"
pst-capital = "sysproduction.run_capital_update:run_capital_update"
pst-fx = "sysproduction.run_daily_fx_and_contract_updates:run_daily_fx_and_contract_updates"
pst-prices = "sysproduction.run_daily_price_updates:run_daily_price_updates"
pst-multadj = "sysproduction.run_daily_update_multiple_adjusted_prices:run_daily_update_multiple_adjusted_prices"
pst-systems = "sysproduction.run_systems:run_systems"
pst-orders = "sysproduction.run_strategy_order_generator:run_strategy_order_generator"
pst-clean = "sysproduction.run_cleaners:run_cleaners"
pst-backup = "sysproduction.run_backups:run_backups"
pst-reports = "sysproduction.run_reports:run_reports"
pst-monitor = "syscontrol.html_monitor:html_monitor"
pst-startup = "sysproduction.startup:startup"
# pst-slippage = "sysproduction.update_slippage:update_slippage"
pst-sample = "sysproduction.update_sampled_contracts:update_sampled_contracts"
pst-stratcap = "sysproduction.update_strategy_capital:update_strategy_capital"
pst-sysbacktests = "sysproduction.update_system_backtests:update_system_backtests"
pst-stratorders = "sysproduction.update_strategy_orders:update_strategy_orders"
pst-logserver = "syslogging.server:run"
